Thu Jun  8 14:43:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Create an OmDebug object to manage debug messages.  This allows
	  the level of debug message to be selected and the output file for
	  debug messages to be set using OM_DEBUG_FILE and OM_DEBUG_TYPES
	  environment variables.

Thu Jun  8 11:32:11 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed some warnings from BackendManager.

Wed Jun  7 18:26:17 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug in Muscat3.6 backends causing an Assertion to fail when
	  the termfrequency of a term not in the database was requested
	  (should have returned 0).

Wed Jun  7 18:08:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More work on scripting languages.  OmQuery _nearly_ works with
	  python.

Wed Jun  7 18:06:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Hopefully fixed a nasty refcount pointer bug.

Wed Jun  7 15:40:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.2.0

Wed Jun  7 15:10:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Rename inttostring() to om_inttostring() to avoid conflicts.

Wed Jun  7 12:26:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Update licences.  Copyright is now held by BrightStation, which
	  is the new name for the part of what used to be Dialog which is
	  running this project.

Wed Jun  7 11:32:19 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Alter testsuite so that the nettests can work with sleepycat
	  databases if desired.

Tue Jun  6 19:10:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix nettest to use backend managers rather than inmemory's indexing.

Tue Jun  6 18:54:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updated socketclient / socketserver to pass the collapse key
	  around with the mset items.
